befooree figuring out observer pattern